# uvi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  TODO.md  cookiecutter.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  tox.ini  uvi.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  release.yml
audits/audit-by-gemini-2.5-pro/: index.html
blog/: index.html
briefs/cli-enhancements/: index.html
briefs/enhanced-binary-inputs/: index.html
briefs/github-pages-integration/: index.html
briefs/makefile-enhancements/: index.html
briefs/template-dependency-parity/: index.html
briefs/tox-to-nox-migration/: index.html
briefs/uvi-future-strategy/: index.html
development/homebrew-guide/: index.html
development/linting-guide/: index.html
development/testing-guide/: index.html
docs/: dependency_updates.md  index.md  prompt-arguments.md  prompts.md  tutorial.md
docs/audits/: audit-by-gemini-2.5-pro.md
docs/blog/: index.md
docs/briefs/: cli-enhancements.md  enhanced-binary-inputs.md  github-pages-integration.md  makefile-enhancements.md  template-dependency-parity.md  tox-to-nox-migration.md  uvi-future-strategy.md
docs/development/: homebrew-guide.md  linting-guide.md  testing-guide.md
docs/features/: admonitions.md  cicd.md  codecov.md  cookiecutter-examples.md  devcontainer.md  direct-cookiecutter.md  docker.md  linting.md  makefile.md  mkdocs.md  publishing.md  tox.md  uv.md
docs/stylesheets/: extra.css
features/admonitions/: index.html
features/cicd/: index.html
features/codecov/: index.html
features/cookiecutter-examples/: index.html
features/devcontainer/: index.html
features/direct-cookiecutter/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prompt-arguments/: index.html
prompts/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  test_cookiecutter.py  utils.py
tutorial/: index.html
uvi/: __init__.py  cli.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/docs/stylesheets/: extra.css
